--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <style>
         body{
             margin: 0px;
+            background-image: url(./bgimg.png);
+    background-repeat: no-repeat;
+   background-size: cover;
+   height: 800px;
         }
         .anchor{
             margin: 0;
@@ -14,17 +18,18 @@
             justify-content: space-evenly;
             width: 100%;
             height: 100px;
-            border: 1px solid;
+            /* border: 1px solid; */
             padding-top: 50px;
             font-family: Arial, Helvetica, sans-serif;
             font-size: 25px;
             text-decoration: none;
-            background-color: rgba(10, 122, 137, 0.478);
+            background-color: rgba(10, 122, 137, 0);
           
         }
         .anchor-1{
             text-decoration: none;
-            color: aliceblue;
+            font-weight: bold;
+            color: rgba(100, 4, 144, 0.576);
             transition: 0.8s;
         }
         .anchor-1:hover{
@@ -40,5 +45,6 @@
         <a class="anchor-1" href="slider.html">Carousel</a>
         <a class="anchor-1" href="sign.html">Login & Signup</a>
        </div>
+       
 </body>
 </html>
